snapshots/syntax/library/statements/reset/reset_at_module_level.snap
---
source: src/syntax/library/statements/file_operations/reset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: ResetStatement
      children:
        - kind: ResetKeyword
          text: Reset
        - kind: Newline
          text: "\n"
